--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
   <p>GitHub is a cloud-based platform that allows users to: 
      Store, share, and collaborate on code
       Users can create a "repository" to store their code, and then share it with others.</p>
+  <b>Github is very efficient tool </b>
 </html>
