--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title> Github  </title>
   </head>
   <h1>What is Github</h1>
+  <h2>Github Intro</h2>
   <p>GitHub is a cloud-based platform that allows users to: 
      Store, share, and collaborate on code
       Users can create a "repository" to store their code, and then share it with others.</p>
